# tffoundation

./: .project  CMakeLists.txt  LICENSE.txt  README.md
cmake/: TFFoundationConfig.cmake  config.cmake  headers.cmake  platformunixtests.cmake
cmake/linux/: config.cmake
cmake/osx/: config.cmake
src/: config.cmake
src/alarm/: config.cmake  tfalarmcenter.cpp  tfalarmcenter.hpp
src/allocator/: config.cmake  tfallocator.hpp  tfallocatorinterface.cpp  tfallocatorinterface.hpp  tfcxxallocator.cpp  tfcxxallocator.hpp  tfuseallocator.hpp.in
src/array/: config.cmake  tfarray.cxx  tfarray.hxx
src/base64/: tfbase64.cpp  tfbase64.hpp
src/commandline/: config.cmake  tfargument.cpp  tfargument.hpp  tfargumentaction.cpp  tfargumentaction.hpp  tfargumentparser.cpp  tfargumentparser.hpp  tfargumenttype.cpp  tfargumenttype.hpp
src/copy/: config.cmake  tfitemcopier.cpp  tfitemcopier.hpp
src/data/: config.cmake  tfdata.cpp  tfdata.hpp
src/date/: config.cmake  tfchronostream.cxx  tfchronostream.hxx  tfdate.cxx  tfdate.hxx  tfdateclocks.hpp  tfdatecomponent.cxx  tfdatecomponent.hxx  tfdateformatter.cxx  tfdateformatter.hxx  tfdatesymbol.cxx  tfdatesymbol.hxx  tfdatetypes.cpp  tfdatetypes.hpp  tfdurationcomponent.cpp  tfdurationcomponent.hpp  tfdurationcomponent.hxx  tfdurationformatter.cpp  tfdurationformatter.hpp  tfdurationsymbol.cpp  tfdurationsymbol.hpp  tfdurationtypes.hpp
src/defer/: config.cmake  tfdefer.cpp  tfdefer.hpp
src/dll/: config.cmake  tfdll.hpp  tfdllbase.hxx  tfdllloader.hpp
src/encoding/: config.cmake  tfasciiencodingteststrategy.cpp  tfasciiencodingteststrategy.hpp  tfencoding.cpp  tfencoding.hpp  tfencodingrecognizer.cpp  tfencodingrecognizer.hpp  tfencodingteststrategy.hpp  tfutf16encodingteststrategy.cpp  tfutf16encodingteststrategy.hpp  tfutf32encodingteststrategy.cpp  tfutf32encodingteststrategy.hpp  tfutf8encodingteststrategy.cpp  tfutf8encodingteststrategy.hpp  tfwindows1252encodingteststrategy.cpp  tfwindows1252encodingteststrategy.hpp
tests/: config.cmake
(+325 files in other folders)
